--- a/pxb-media-test/app/globals.css
+++ b/pxb-media-test/app/globals.css
@@ -31,3 +31,22 @@ body {
     text-wrap: balance;
   }
 }
+
+@font-face {
+  font-family: 'Compton';
+  src: url('/fonts/campton-black.otf') format('otf'),
+       url('/fonts/campton-bold.otf') format('otf');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Compton';
+  src: url('/fonts/campton-black.otf') format('otf'),
+       url('/fonts/campton-bold.otf') format('otf');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
