--- a/pxb-media-test/app/globals.css
+++ b/pxb-media-test/app/globals.css
@@ -59,3 +59,18 @@ body {
   font-display: swap;
 }
 }
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+      animation-timing-function: ease-in;
+  }
+  40% {
+      transform: translateY(-30px);
+      animation-timing-function: ease-out;
+  }
+  60% {
+      transform: translateY(-15px);
+      animation-timing-function: ease-out;
+  }
+}
