--- a/pxb-media-test/app/globals.css
+++ b/pxb-media-test/app/globals.css
@@ -33,44 +33,171 @@ body {
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
     display: none;
-}
-/* Hide scrollbar for IE, Edge and Firefox */
-.no-scrollbar {
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
+  }
 }
-}
-
 
 @layer base {
-@font-face {
-  font-family: 'Campton';
-  src: url(/fonts/campton-black.otf) format('opentype');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
+  @font-face {
+    font-family: 'Campton';
+    src: url(/fonts/campton-black.otf) format('opentype');
+    font-weight: 900;
+    font-style: normal;
+    font-display: swap;
+  }
 
-@font-face {
-  font-family: 'Campton';
-  src: url(/fonts/campton-bold.otf) format('opentype');
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
+  @font-face {
+    font-family: 'Campton';
+    src: url(/fonts/campton-blackitalic.otf) format('opentype');
+    font-weight: 900;
+    font-style: italic;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Campton';
+    src: url(/fonts/campton-bold.otf) format('opentype');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Campton';
+    src: url(/fonts/campton-bolditalic.otf) format('opentype');
+    font-weight: 700;
+    font-style: italic;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Campton';
+    src: url(/fonts/campton-book.otf) format('opentype');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Campton';
+    src: url(/fonts/campton-bookitalic.otf) format('opentype');
+    font-weight: 400;
+    font-style: italic;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Campton';
+    src: url(/fonts/campton-extrabold.otf) format('opentype');
+    font-weight: 800;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Campton';
+    src: url(/fonts/campton-extrabolditalic.otf) format('opentype');
+    font-weight: 800;
+    font-style: italic;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Campton';
+    src: url(/fonts/campton-extralight.otf) format('opentype');
+    font-weight: 200;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Campton';
+    src: url(/fonts/campton-extralightitalic.otf) format('opentype');
+    font-weight: 200;
+    font-style: italic;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Campton';
+    src: url(/fonts/campton-light.otf) format('opentype');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Campton';
+    src: url(/fonts/campton-lightitalic.otf) format('opentype');
+    font-weight: 300;
+    font-style: italic;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Campton';
+    src: url(/fonts/campton-medium.otf) format('opentype');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Campton';
+    src: url(/fonts/campton-mediumitalic.otf) format('opentype');
+    font-weight: 500;
+    font-style: italic;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Campton';
+    src: url(/fonts/campton-semibold.otf) format('opentype');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Campton';
+    src: url(/fonts/campton-semibolditalic.otf) format('opentype');
+    font-weight: 600;
+    font-style: italic;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Campton';
+    src: url(/fonts/campton-thin.otf) format('opentype');
+    font-weight: 100;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Campton';
+    src: url(/fonts/campton-thinitalic.otf) format('opentype');
+    font-weight: 100;
+    font-style: italic;
+    font-display: swap;
+  }
 }
 
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
-      transform: translateY(0);
-      animation-timing-function: ease-in;
+    transform: translateY(0);
+    animation-timing-function: ease-in;
   }
   40% {
-      transform: translateY(-30px);
-      animation-timing-function: ease-out;
+    transform: translateY(-30px);
+    animation-timing-function: ease-out;
   }
   60% {
-      transform: translateY(-15px);
-      animation-timing-function: ease-out;
+    transform: translateY(-15px);
+    animation-timing-function: ease-out;
   }
 }
