--- a/pxb-media-test/app/globals.css
+++ b/pxb-media-test/app/globals.css
@@ -185,6 +185,14 @@ body {
     font-style: italic;
     font-display: swap;
   }
+
+  @font-face {
+    font-family: 'Inter';
+    src: url(/fonts/Inter-black.otf);
+    font-weight: 900;
+    font-style: normal;
+    font-display: swap;
+  }
 }
 
 @keyframes bounce {
