fixed partner logo seciton

--- a/pxb-media-test/app/globals.css
+++ b/pxb-media-test/app/globals.css
@@ -211,3 +211,11 @@ body {
     animation-timing-function: ease-out;
   }
 }
+
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;  /* Chrome, Safari and Opera */
+}
