--- a/pxb-media-test/app/globals.css
+++ b/pxb-media-test/app/globals.css
@@ -24,6 +24,11 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    min-height: -webkit-fill-available;
+}
+
+html {
+  height: -webkit-fill-available;
 }
 
 @layer utilities {
