move text up a bit

--- a/pxb-media-test/app/case/[id]/case-styles.css
+++ b/pxb-media-test/app/case/[id]/case-styles.css
@@ -16,7 +16,7 @@
 
 /* Adjust the positioning of the featured image and content */
 .case-intro {
-  margin-top: 2rem;
+  margin-top: 0.5rem;
   position: relative;
   z-index: 10;
 }
@@ -27,12 +27,19 @@
   z-index: 20;
   background-color: rgba(0, 0, 0, 0.8);
   border-radius: 0.5rem 0.5rem 0 0;
-  margin-top: 2rem;
+  margin-top: 0.5rem;
+  padding-top: 1rem;
+}
+
+@media (min-width: 768px) {
+  .case-container {
+    margin-top: 1rem;
+  }
 }
 
 @media (min-width: 1200px) {
   .case-container {
-    margin-top: 3rem;
+    margin-top: 1.5rem;
   }
 }
 
@@ -41,8 +48,8 @@
     max-width: 1400px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 5rem;
-    padding-top: 2rem;
+    margin-top: 2rem;
+    padding-top: 1.5rem;
   }
   
   .case-hero-image {
@@ -55,8 +62,8 @@
 @media (min-width: 2000px) {
   .case-container {
     max-width: 1600px;
-    margin-top: 7rem;
-    padding-top: 3rem;
+    margin-top: 3rem;
+    padding-top: 2rem;
   }
 }
 
